[Fix] CORS 환경변수 기반으로 변경 및 docker-compose 환경변수 추가
- SecurityConfig: CORS_ALLOWED_ORIGINS 환경변수로 origin 동적 설정
- application-dev.yaml: JWT_SECRET, CORS_ALLOWED_ORIGINS 환경변수 바인딩
- docker-compose.yml: CORS_ALLOWED_ORIGINS, SPRING_PROFILES_ACTIVE 환경변수 추가

AWS 배포 시 CloudFront URL이 자동으로 CORS에 허용됨

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>